# -tetris-overlay-test

./: .codeiumignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CI_FINAL_STATUS.md  CI_STATUS.md  CI_STATUS_UPDATED.md  CMakeLists.txt  CONTRIBUTING.md  CURSOR_AI_PLANNING.md  DAY5_END.md  DAY6_CHANGES.md  DAY6_FINAL_STATUS.md  DAY6_PLAN.md  FUTURE_ROADMAP.md  LLM_QUICK_START.md  MyOverlayInstaller.iss  PRODUCTION.md  PROJECT_COMPLETE_STATE.md  PROJECT_STATE_2026-02-15.md  README.md  README_CI.md  RESPONSE_FOOTER.txt  SECOND_PC_SETUP.md  SYSTEM_ANALYSIS.md  TetrisOverlay.spec  VERIFICATION.md  add_tracer_to_all.py  agents.md  ai_board_finder.py  auto_capture_game.py  baseline_tests.txt  benchmark.txt  benchmark_accuracy.py  benchmark_report.json  build_capture.py  build_dxgi_full.ps1  build_dxgi_full_fixed.ps1  build_exe.py  build_portable.ps1  (+71 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  ci_python.yml  ci_python_overlay.yml  comprehensive-ci.yml  lint-test.yml  llm-qa.yml  release.yml
.windsurf/: hooks.json  pre_write_code.py  settings.json
config/: config.json  config_new.json  roi_config.json
cpp_binding/board_processor_cpp/: CMakeLists.txt  board_processor.cpp  board_processor.hpp  build_board_processor.bat  pybind_module.cpp
cpp_binding/dxgi_capture/: CMakeLists.txt  README.md  build_dxgi_capture.bat  dxgi_frame_grabber.cpp  dxgi_frame_grabber.h  pybind_module.cpp
docs/: HOTKEYS.md  MANDATORY_LOGGING_STANDARD.md  PROJECT_CLEANUP_GUIDE.md  PROJECT_STRUCTURE_PLAN.md  README.md  TODAYS_CHANGES_LOG.md  TODAYS_CHANGES_LOG_re.md  adding kenny loggins.md  bosses paln .md  clean up plan.md  curernt project goals 2 16 2026 .md  day9-start.md  extended plan completion.md  extended plan.md  how to fix our problems.md  legacy-cleanup.md  mamagments responce .md  management-assessment.md  phase1-complete-documentation.md  plan 4 completion.md  plan 5 completion.md  plan 6 completion.md  plan 7 completion.md  plan 8 completion.md  plan part 4 .md  plan part 5 .md  plan part 6 .md  plan part 7 .md  plan part 8 .md  possalbe updates of project3.md  product-readiness-roadmap2 16 2026 .md  reply.md  reviewpart 2.md
docs/legacy/: tetris-overlay-project.md  tetris-overlay-requirements.txt
performance/: profiler.py
plugins/: __init__.py  base.py
scripts/: build_portable.ps1  cnn_verify.py  overlay_config_ui.py  replace_tracer_imports.py  run_all_tests.py  run_day6_all.ps1  run_day6_all_fixed.ps1  task1_log_tracker_cleanup.ps1  task3_crossplatform_packaging.ps1  task4_unittest_suite.ps1  task5_cnn_verify.ps1  task6_user_config_ui.ps1  task7_doc_purge.ps1  task8_verification_backup.ps1
src/: __init__.py  calibrate.py  capture_agent.py  config.py  logger_bridge.py  main.py  window_filter_DEPRECATED.py  window_filter_old.py
src/agents/: __init__.py  __init___new.py  base_agent.py  benchmark_agent.py  board_extractor_agent.py  board_processor_agent.py  calibrate_agent.py  capture_agent.py  capture_agent_DEPRECATED.py  config_agent.py  dxgi_perf.py  error_handler_agent.py  hotkey_agent.py  orchestrator_agent_alias.py  orchestrator_agent_main.py  overlay_renderer_agent.py  overlay_renderer_agent_ghost.py  overlay_renderer_agent_simple.py  piece_detector_agent.py  prediction_agent.py  prediction_agent_dellacherie.py  prediction_agent_mock_perfect.py  prediction_agent_onnx.py  prediction_agent_simple.py  run_agent.py  shutdown_agent.py  synthetic_capture_agent.py
src/capture_cpp/: CMakeLists.txt  capture.cpp  capture.h
src/integrations/: cpp_engine.py
src/models/: README.md
src/orchestrator/: __init__.py  model.py  orchestrator.py
src/tetris_overlay/: __init__.py  __main__.py
src/tetris_overlay/core/: board_utils.py  capture.py  config.py  detection.py  overlay.py  tetromino_shapes.py  threaded_overlay.py  wgc_capture.py
src/tetris_overlay/ui/: settings_dialog.py  wizard.py
src/tetris_overlay/utils/: logger.py
stats/: collector.py  db.py  service.py
tests/: benchmark_frame_time.py  conftest.py  test_board_processor.py  test_dxgi_capture.py  test_dxgi_perf.py  test_end_to_end.py  test_import.py  test_integration.py  test_orchestrator.py  test_overlay_integration.py  test_overlay_renderer.py  test_performance_monitor.py  test_piece_detector.py  test_prediction_agent.py  test_regression.py  test_settings.py  test_shared_ui.py  test_smoke.py  test_stats_db.py  test_telemetry_logging.py  test_tetromino_shapes.py  test_tracer.py  test_ui_dashboard.py  test_ui_integration.py
tetris-overlay/: system.md
tetris_overlay/: CMakeLists.txt  PROJECT_COMPLETE_STATE.md  README.md  calibration.json
tetris_overlay/src/: board_extractor.cpp  board_extractor.h  calibrate.cpp  calibrate.h  frame_grabber.cpp  frame_grabber.h  heuristic_engine.cpp  heuristic_engine.h  main.cpp  overlay_renderer.cpp  overlay_renderer.h  utils.h
tools/: create_dummy_board.py  generate_templates.py
tools/calibration/: __init__.py  calibration_ui.py
tools/misc/: ai_board_finder.py  auto_capture_game.py
tools/window/: update_window_filter.py
tracer/: __init__.py  client.py  server.py
ui/: current_settings.py  settings.py  settings_dialog.py  settings_schema.json  settings_storage.py  stats_dashboard.py
web/: dashboard.py
