[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tetris-overlay"
version = "2.0.0"
description = "A production-ready, real-time Tetris assistance overlay with ghost pieces, combo tracking, and comprehensive statistics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tetris Overlay Team", email = "dev@tetris-overlay.com"}
]
maintainers = [
    {name = "Tetris Overlay Team", email = "dev@tetris-overlay.com"}
]
keywords = ["tetris", "overlay", "gaming", "ghost-piece", "statistics", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "sqlmodel>=0.0.14",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
    "keyboard>=0.13.5",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "tinydb>=4.8.0",
    "jsonschema>=4.19.0",
    "pydantic>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "pytest-mock>=3.11.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "types-PySide6>=6.6.0",
    "types-Pillow>=10.0.0",
    "types-requests>=2.31.0",
    "pre-commit>=3.3.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "pdoc>=14.0.0",
]
build = [
    "pyinstaller>=5.13.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "pytest-mock>=3.11.0",
    "pytest-xvfb>=3.0.0",
    "pytest-benchmark>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/gainey666/-tetris-overlay-test"
Documentation = "https://tetris-overlay.readthedocs.io"
Repository = "https://github.com/gainey666/-tetris-overlay-test.git"
"Bug Tracker" = "https://github.com/gainey666/-tetris-overlay-test/issues"
Changelog = "https://github.com/gainey666/-tetris-overlay-test/blob/main/CHANGELOG.md"
Discussions = "https://github.com/gainey666/-tetris-overlay-test/discussions"

[project.scripts]
tetris-overlay = "run_overlay_core:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tetris_overlay*"]
exclude = ["tests*", "docs*", "build*", "dist*"]

[tool.setuptools.package-data]
tetris_overlay = ["*.json", "*.yaml", "*.yml", "*.png", "*.jpg", "*.ico", "*.icns"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pygame.*",
    "cv2.*",
    "keyboard.*",
    "matplotlib.*",
    "mplcursors.*",
    "tinydb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "ui: marks tests as UI tests",
    "performance: marks tests as performance tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "test_*",
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "build/*",
    "dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]

[tool.pdoc]
docformat = "google"
